--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -58,16 +58,18 @@
         // }
         .gallery-heading {
             text-align: center;
-            font-weight: 700;
-            font-family: $secondary-font;
-            @include heading_gradient;
-
             text-transform: uppercase;
             padding-top: 50px;
             margin-bottom: 0;
             font-size: 2em;
             @media (min-width: 768px) {
                 font-size: 3rem;
+            }
+
+            span {
+                @include heading_gradient;
+                font-weight: 700;
+                font-family: $secondary-font;
             }
         }
         .gallery-heading-text {
@@ -137,15 +139,18 @@
         margin-bottom: 40px;
         .trend-heading{
             text-align: center;
-            font-weight: 700;
-            font-family: $secondary-font;
-            @include heading_gradient;
             text-transform: uppercase;
             padding-top: 50px;
             margin-bottom: 0;
             font-size: 2em;
             @media (min-width: 768px) {
                 font-size: 3rem;
+            }
+
+            span {
+                @include heading_gradient;
+                font-weight: 700;
+                font-family: $secondary-font;
             }
         }
         .trend-heading-text {
@@ -160,22 +165,67 @@
     }
     .fashion-container{
         display: grid;
-        grid-template-areas: "left rightTop"
-                             "left rightBottom";
+        grid-template-areas: "left rightTop" "left rightBottom";
         gap: 35px;
+        grid-template-columns: 1fr 1fr;
 
         .left-fashion{
-            min-height: 200px;
             grid-area: left;
 
             .slides {
-                height: 100%;
-
                 .slide {
-                    @include fashion_image_section;
+                    .slide-main {
+                        @include fashion_image_section;
+
+                        .fontlayer {
+                            bottom: 30px;
+                            right: 15px;
+                        }
+                    }
+                }
+            }
+
+            .tns-outer {
+                position: relative;
+
+                .tns-nav {
+                    position: absolute;
+                    left: 50%;
+                    bottom: 10px;
+                    transform: translateX(-50%);
+                    text-align: center;
+                    z-index: 5;
+
+                    button {
+                        background: transparent;
+                        border: 1px solid #fff;
+                        box-shadow: none;
+                        outline: none;
+                        padding: 5px;
+                        margin: 0 3px;
+                        border-radius: 50%;
+                        transition: all 0.12s ease-in-out;
+
+                        &:first-child {
+                            margin-left: 0;
+                        }
+
+                        &:last-child {
+                            margin-right: 0;
+                        }
+
+                        &.tns-nav-active {
+                            background: #fff;
+                        }
+
+                        &:hover {
+                            opacity: 0.8;
+                        }
+                    }
                 }
             }
         }
+
         .right-top-fashion{
             background-color: aqua;
             min-height: 280px;
@@ -183,32 +233,39 @@
             @include fashion_image_section('../images/fashion2.jpg');
             
             .fontlayer{
-                position: absolute;
                 top: 0;
                 left: 0;
                 width: 100%;
                 height: 100%;
+
                 .fashion-heading{
-                    color: #fff;
-                    text-decoration: underline;
                     padding:84px 10px;
                     padding-bottom: 0;
                 }
                 .fashion-text{
-                    color: #fff;
                     padding-left: 10px;
-                }
-            }
-            &:hover{
-                .image{
-                    transform: scale(1.2);
                 }
             }
         }
         .right-bottom-fashion{
-            background-image: url(../images/fashion3.jpg);
             min-height: 280px;
             grid-area: rightBottom;
+            @include fashion_image_section('../images/fashion3.jpg');
+
+            .fontlayer{
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+
+                .fashion-heading{
+                    padding:84px 10px;
+                    padding-bottom: 0;
+                }
+                .fashion-text{
+                    padding-left: 10px;
+                }
+            }
         }
     }
         
@@ -253,11 +310,14 @@
     }
     .review-heading{
         text-align: center;
-        font-size: 4em;
-        font-weight: 700;
-        font-family: $secondary-font;
-        @include heading_gradient;
         padding-bottom: 40px;
+        font-size: 4em;
+
+        span {
+            @include heading_gradient;
+            font-family: $secondary-font;
+            font-weight: 700;
+        }
         
     }
     .publish-review{
