--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,41 +1,78 @@
 .hero-section{
     height: 700px;
-    background-image: url(../images/slider.jpg);
+    // background-image: url(../images/slider.jpg);
     background-size: cover;
     background-position: top center;
-    .hero-text{ 
-        padding: 200px 0;
-        p{
-        padding-left: 40px;
-        font-weight: 300;
-        font-style: italic;
-        color: #ffffff;
-        font-size: 3em;
-        }
-        .hero-heading{
-            font-weight: 700;
-            // font-style: italic;
-            color: #ffffff;
-            font-size: 7em; 
-            background: linear-gradient(to right, #ffba02 6%,#e5ce5d 32%,#fcefb0 63%,#ec9601 84%);
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-family: $secondary-font;
-
-        }
-    .link-text{
-        text-align: center;
-        a{
-            color: #fff;
-            font-size: 2em;
-            text-decoration: none;
-            font-weight: 400;
-            i{
-                vertical-align: middle;
-                color: #010101;
+    .tns-outer{
+        position: relative;
+        .tns-controls{
+            display: flex;
+            justify-content: space-between;
+            position: absolute;
+            top: 50%;
+            left:0;
+            transform: translateY(-50%);
+            width: 100%;
+            z-index: 3;
+            button{
+                background-color: transparent;
+                box-shadow: none;
+                border:none;
+                color:#fff;
+                font-size: 3em;
+                padding: 0 30px;
+                &:hover{
+                 opacity: 0.7;
+                }
             }
         }
-    }       
+    }
+    .slides{
+        .slide{
+            // background-image: url(../images/heroimg.jpg);
+            background-size: cover;
+            background-position: top center;
+                .slide-main{
+                    align-items: center; 
+                    height: 700px;
+                .hero-text{ 
+                    padding: 200px 0;
+                    p{
+                    padding-left: 185px;
+                    font-weight: 300;
+                    font-style: italic;
+                    color: #ffffff;
+                    font-size: 3em;
+                    }
+                    .hero-heading{
+                        padding-left: 175px;
+                        font-weight: 700;
+                        // font-style: italic;
+                        color: #ffffff;
+                        font-size: 7em; 
+                        background: linear-gradient(to right, #ffba02 6%,#e5ce5d 32%,#fcefb0 63%,#ec9601 84%);
+                        background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                        font-family: $secondary-font;
+
+                    }
+                    .link-text{
+                        width: 100%;
+                        text-align: center;
+                        a{
+                            color: #fff;
+                            font-size: 2em;
+                            text-decoration: none;
+                            font-weight: 400;
+                            i{
+                                vertical-align: middle;
+                                color: #010101;
+                            }
+                        }
+                    } 
+                }      
+            }
+        }
     }
 }
 
@@ -272,8 +309,236 @@
 }
 //ends trends section
 
+// service section start
+
+.service-section{
+    .service-main{
+        // display: flex;
+        .image{
+            img{
+                width: 30%;
+            }
+        }
+        .service-text{
+            .service-top-text{
+                font-weight: 600;
+                font-size: 1.5em;
+                color: #ffb600;
+                text-align: center;
+            }
+            .text{
+                color: #000000;
+                font-weight: 600;
+                font-size: 1em;
+                text-align: center;
+            }
+        }
+    }
+    .image{
+        img{
+            width: 30%;
+        }
+    }
+    .service-second-text{
+        .service-second-heading-text{
+            font-weight: 600;
+            font-size: 1.5em;
+            color: #ffb600;
+            text-align: center;
+        }
+        .second-text{
+            color: #000000;
+            font-weight: 600;
+            font-size: 1em;
+            text-align: center;
+        }
+    }
+}
+
+// service section end
+
+//popular design section
+.popular-design-sec{
+    margin-top: 141px;
+    .popular-design{
+        padding: 77px 0;
+        padding-bottom: 0;
+        .popular-design-heading{
+            font-weight: 400;
+            font-size: 5em; 
+            @include heading_gradient;
+            font-family: $secondary-font;  
+        }
+        .popular-design-text{
+            color: #a28774;
+            font-weight: 400;
+            font-size: 1.2em;
+        }
+    .btn-container{
+        margin: 32px 20px;
+        .btn{
+            color: #fdba00;
+            border-style:solid;
+            border-width:2px 2px;
+            border-color:#353535;
+            width: 200px;
+            height: 55px;
+            padding: 12px 10px;
+            font-size: 1.2em;
+            font-weight: 600;
+            transition: transform .2s;
+                &:hover{
+                    transform: scale(1.5); 
+                }
+            }
+        }
+    }
+    .product{
+        .img-container{
+            overflow: hidden;
+            img{
+                transition: transform .2s;
+            }
+        }
+       
+        &:hover{
+            .img-container{
+                img{
+                    transform: scale(1.2);
+                }
+            }
+        }
+    }
+}
+
+//popular design section
+
+//styling section
+.styling-sec {
+    margin-top: 96px;
+    margin-bottom: 107px;
+    .section-heading{
+        position: relative;
+        margin-bottom: 40px;
+        .styling-heading {
+            text-align: center;
+            text-transform: uppercase;
+            padding-top: 50px;
+            margin-bottom: 90px;
+            font-size: 2em;
+            font-family: $secondary-font;
+            @media (min-width: 768px) {
+                font-size: 3rem;
+                font-weight: 700;
+                font-family: $secondary-font;
+            }
+            span {
+                @include heading_gradient;
+                font-weight: 700;
+                font-family: $secondary-font;
+                font-size: 3rem;
+            }
+        }
+        .styling-heading-text {
+            text-align: center;
+            padding: 17px 0;
+            font-weight: 400;
+            font-family: $primary-font;
+            color: #3a281f;
+            font-size: 2rem;
+    
+        }
+        
+    }
+    .styling{
+        box-shadow:9px 9px #ffb200;
+    }
+}
+//end styling section
+
+// subscribe section start
+
+.subscribe-sec{
+    background-image: url(../images/subscribe_background.jpg);
+    background-size: cover;
+    background-position: bottom center;
+    height: 264px;
+    margin-bottom: 85px;
+    .subscribe-heading-text{
+        .heading{
+            font-family: $secondary-font;
+            font-weight: 400;
+            font-size: 4em;
+            color: #060606;
+            text-align: center;
+            margin: 33px 0;
+            margin-bottom: 0;
+            letter-spacing: 13px;
+        }
+        .text{
+            color: #7f712c;
+            text-align: center;
+            font-family: $secondary-font;
+            font-weight: 400;
+            font-size: 1em;
+            letter-spacing: 2px;
+            margin-bottom: 30px;
+        }
+        form{
+            // text-align: center;
+            padding-left: 423px;
+            input{
+                // border-top: 5px solid #686868;
+                // border-bottom: 1px solid #fff;
+                // border-left: 2px solid #dcdcdc;
+                // border-right: 2px solid #dcdcdc;
+                border: none;
+                float: left;
+                width: 42%;
+                padding:5px 25px; 
+                &::placeholder{
+                    color:#0c0a00;
+                    font-style: italic;
+                    font-weight: 300;
+                    font-size: 1.2em;
+                    letter-spacing: 4px;
+                }
+            }
+            button{
+                // float: left;
+                width: 15%;
+                // padding: 10px;
+                background: #fce685;
+                color: #0c0a00;
+                font-size: 17px;
+                border: none;
+                padding: 5px 19px;
+                // border-left: none;
+                // cursor: pointer;
+                display: inline-block;
+                font-weight: 800;
+                &:hover{
+                    opacity: 0.8;
+                }
+            } 
+        }
+        .bottom-text{
+            margin-top: 25px;
+            color: #fffae9;
+            font-weight: 800;
+            font-size: 0.9em;
+            text-align: center;
+            letter-spacing: 1px;
+        }
+       
+    }
+}
+
+// subscribe section end
+
 //review section
 .review-section{
+    margin-bottom: 87px;
     .tns-outer{
         position: relative;
         .tns-controls{
