--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -210,12 +210,23 @@
     }
     .fashion-container{
         display: grid;
-        grid-template-areas: "left rightTop" "left rightBottom";
-        gap: 35px;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas: "left" "rightTop" "rightBottom";
+        gap: 15px;
+
+        @media (min-width: 576px) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas: "left left" "rightTop rightBottom";
+        }
+        
+        @media (min-width: 768px) {
+            grid-template-areas: "left rightTop" "left rightBottom";
+            gap: 35px;
+        }
 
         .left-fashion{
             grid-area: left;
+            min-height: 280px;
 
             .slides {
                 .slide {
@@ -347,17 +358,13 @@
         }
 
         .image{
-            width: 80%;
+            width: 70%;
             padding: 0 10px;
+            margin: 0 auto;
             
             @media (min-width: 768px) {
-                width: 30%;    
-            }
-            img{
-                padding-left: 41px;
-                @media (min-width: 768px){
-                    padding-left: 0;
-                }
+                width: 30%;
+                margin: initial; 
             }
         }
         .service-text{
@@ -641,21 +648,26 @@
 //review section
 .review-section{
     margin-bottom: 87px;
-    display: none;
-    @media (min-width: 768px) {
-        display: block;
-    }
+    
     .tns-outer{
         position: relative;
         .tns-controls{
-            display: flex;
-            justify-content: space-between;
             position: absolute;
-            top: 50%;
-            left:50%;
-            transform: translate(-50% , -50%);
-            width: calc(100% + 230px);
-            z-index: 3;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            left: 0;
+            bottom: -50px;
+
+            @media (min-width: 1200px) {
+                top: 50%;
+                left:50%;
+                transform: translate(-50% , -50%);
+                justify-content: space-between;
+                width: calc(100% + 230px);
+                z-index: 3;
+            }
+
             button{
                 box-shadow: none;
                 border:none;
@@ -667,14 +679,26 @@
                 width: 50px;
                 background-color: #fce685;
                 position: relative;
+                
+                &:first-child {
+                    margin-right: 20px;
+                }
+
                 i{
                     position: absolute;
                     top: 50%;
                     left: 50%;
                     transform: translate(-50% ,-50%);
                 }
+
                 &:hover{
                  opacity: 0.7;
+                }
+
+                @media (min-width: 1200px) {
+                    &:first-child {
+                        margin-right: 0;
+                    }
                 }
             }
         }
