--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,7 +1,7 @@
 .page-header {
     background-image: url(../images/headingbg.jpg);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.288);
-    // padding: 25px 0;
+    padding: 20px 0;
     position: fixed;
     top: 0;
     left: 0;
